force-app/main/default/objects/Tax_Compliance__c/fields/Agency_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Agency_Due_Date__c</fullName>
    <description>Agency Due Date is recorded</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>