force-app/main/default/objects/Tax_Compliance__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Tax Compliance</relationshipLabel>
    <relationshipName>Tax_Compliance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>