force-app/main/default/objects/Tax_Compliance__c/fields/Compliance_Team_POC__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Team_POC__c</fullName>
    <description>Compliance Team POC</description>
    <label>Compliance Team POC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll Product Compliance</fullName>
            </value>
            <value>
                <fullName>Regulatory Affairs</fullName>
            </value>
            <value>
                <fullName>Symmetry Compliance</fullName>
            </value>
            <value>
                <fullName>Tax Filing Compliance (STS)</fullName>
            </value>
            <value>
                <fullName>Tax Filing Compliance (PF)</fullName>
            </value>
            <value>
                <fullName>Tax Filing Compliance</fullName>
                <isActive>false</isActive>
                <label>Tax Filing Compliance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>