force-app/main/default/objects/Tax_Compliance__c/fields/Customer_Comms__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comms__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Comms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>