force-app/main/default/objects/Tax_Compliance__c/fields/CX_Comms__c.field-meta.xml
<CustomField>
    <fullName>CX_Comms__c</fullName>
    <label>CX Comms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>