force-app/main/default/objects/Tax_Compliance__c/fields/Date_Added_in_Gusto_T_M__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_in_Gusto_T_M__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Added in Gusto (T+M)</label>
    <type>Date</type>
</CustomField>