force-app/main/default/objects/Tax_Compliance__c/fields/Eng_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Eng_Due_Date__c</fullName>
    <description>Eng Due Date</description>
    <label>Eng Due Date</label>
    <type>Date</type>
</CustomField>