force-app/main/default/objects/Tax_Compliance__c/fields/Eng_Status__c.field-meta.xml
<CustomField>
    <fullName>Eng_Status__c</fullName>
    <description>Eng Status</description>
    <label>Eng Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Exploration (Spec/ Design)</fullName>
            </value>
            <value>
                <fullName>No Eng Work Needed</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Idea</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>