force-app/main/default/objects/Tax_Compliance__c/fields/EPDD_DRI__c.field-meta.xml
<CustomField>
    <fullName>EPDD_DRI__c</fullName>
    <description>Assigning tasks to user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>