force-app/main/default/objects/Tax_Compliance__c/fields/Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date__c</fullName>
    <description>Follow up Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow up Date</label>
    <type>Date</type>
</CustomField>