force-app/main/default/objects/Tax_Compliance__c/fields/Frequency_of_Update__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Update__c</fullName>
    <description>Frequency of Update</description>
    <label>Frequency of Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One time Task</fullName>
            </value>
            <value>
                <fullName>Annual Task</fullName>
            </value>
            <value>
                <fullName>Quarterly Task</fullName>
            </value>
            <value>
                <fullName>Bi Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>