force-app/main/default/objects/Tax_Compliance__c/fields/Help_Center_IKB_External__c.field-meta.xml
<CustomField>
    <fullName>Help_Center_IKB_External__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicating Help Center/IKB is ready</description>
    <label>Help Center/IKB Ready to Publish</label>
    <type>Checkbox</type>
</CustomField>