force-app/main/default/objects/Tax_Compliance__c/fields/Help_Center_IKB_Internal__c.field-meta.xml
<CustomField>
    <fullName>Help_Center_IKB_Internal__c</fullName>
    <description>Enter Help Center/IKB URL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Help Center/IKB Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>