force-app/main/default/objects/Tax_Compliance__c/fields/Impacts__c.field-meta.xml
<CustomField>
    <fullName>Impacts__c</fullName>
    <label>Impacted Change Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractors</fullName>
            </value>
            <value>
                <fullName>New Tax Creation</fullName>
            </value>
            <value>
                <fullName>Paid Family Leave</fullName>
            </value>
            <value>
                <fullName>Long Term Care</fullName>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Taxable Wages</fullName>
            </value>
            <value>
                <fullName>Tax Rate Change</fullName>
            </value>
            <value>
                <fullName>Garnishments</fullName>
            </value>
            <value>
                <fullName>TaxRecons</fullName>
            </value>
            <value>
                <fullName>Non-Regular Payrolls</fullName>
            </value>
            <value>
                <fullName>Tax Credits</fullName>
            </value>
            <value>
                <fullName>Termination Payroll</fullName>
            </value>
            <value>
                <fullName>New Hire Reporting</fullName>
            </value>
            <value>
                <fullName>Employee Onboarding</fullName>
            </value>
            <value>
                <fullName>W-4</fullName>
            </value>
            <value>
                <fullName>Employer Onboarding</fullName>
            </value>
            <value>
                <fullName>Worker Payments</fullName>
            </value>
            <value>
                <fullName>Amendments</fullName>
            </value>
            <value>
                <fullName>Year Round Accuracy (YRTA)</fullName>
            </value>
            <value>
                <fullName>Authorizations/ POAs</fullName>
            </value>
            <value>
                <fullName>Time Tracking</fullName>
            </value>
            <value>
                <fullName>Regular Rate of Pay (RRoP)</fullName>
            </value>
            <value>
                <fullName>Bulk Electronic Notices</fullName>
            </value>
            <value>
                <fullName>Software Developer Reqs</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>EIN Updates</fullName>
            </value>
            <value>
                <fullName>New Agency System</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Deposit Frequency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>