force-app/main/default/objects/Tax_Compliance__c/fields/In_App_content__c.field-meta.xml
<CustomField>
    <fullName>In_App_content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>In App content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>