force-app/main/default/objects/Tax_Compliance__c/fields/Resource_Link__c.field-meta.xml
<CustomField>
    <fullName>Resource_Link__c</fullName>
    <description>Enter Google Drive URL or details</description>
    <label>Google Drive</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>