force-app/main/default/objects/Tax_Compliance__c/fields/System_impacted__c.field-meta.xml
<CustomField>
    <fullName>System_impacted__c</fullName>
    <description>System Impacted</description>
    <label>System Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other Gusto System</fullName>
            </value>
            <value>
                <fullName>Payments &amp; Filings</fullName>
            </value>
            <value>
                <fullName>Compliance Tracker</fullName>
            </value>
            <value>
                <fullName>Gusto&apos;s Garnishment system (ZP)</fullName>
            </value>
            <value>
                <fullName>Master Tax</fullName>
                <isActive>false</isActive>
                <label>Master Tax</label>
            </value>
            <value>
                <fullName>Payment &amp; Filings</fullName>
                <isActive>false</isActive>
                <label>Payment &amp; Filings</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>