force-app/main/default/objects/Tax_Compliance__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Tier</description>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1-Major Product Launch</fullName>
            </value>
            <value>
                <fullName>Tier 2-Feature Launch</fullName>
            </value>
            <value>
                <fullName>Tier 3-Feature Enhancement</fullName>
            </value>
            <value>
                <fullName>Tier 4-System Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>