force-app/main/default/objects/Tax_Compliance__c/fields/Who_Owns_this_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Who_Owns_this_Initiative__c</fullName>
    <description>Who Owns this Initiative</description>
    <label>Who Owns this Initiative</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taxes &amp; Monies</fullName>
            </value>
            <value>
                <fullName>Payments &amp; Filings</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>People Platform</fullName>
            </value>
            <value>
                <fullName>Symmetry</fullName>
            </value>
            <value>
                <fullName>Distributed</fullName>
            </value>
            <value>
                <fullName>Product Services -Fraud</fullName>
            </value>
            <value>
                <fullName>Tax Set up</fullName>
            </value>
            <value>
                <fullName>Payroll life cycle</fullName>
            </value>
            <value>
                <fullName>Gustie Tools</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>PayOps</fullName>
            </value>
            <value>
                <fullName>Tax Filing Compliance (STS)</fullName>
            </value>
            <value>
                <fullName>Tax Filing Compliance (PF)</fullName>
            </value>
            <value>
                <fullName>Talent</fullName>
            </value>
            <value>
                <fullName>Time Tools</fullName>
            </value>
            <value>
                <fullName>Members</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>